// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/component/kanban/kanban > do not return a kanban with groupByProperty undefined 1`] = `
<div>
  <div />
</div>
`;

exports[`src/component/kanban/kanban > return kanban and change title on KanbanColumnHeader 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="New Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          
          <span>
            + Add a group
          </span>
          
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`src/component/kanban/kanban > return kanban and click on KanbanCalculationMenu 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          <div
            class="Combobox CalculationOptions"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="Combobox__live-region"
              role="log"
            />
            <div
              class="CalculationOptions__control"
            >
              <div
                class="CalculationOptions__value-container"
              >
                
                <div
                  class="CalculationOptions__single-value"
                >
                  Count
                </div>
                
                <input
                  aria-activedescendant="cl-22-option-0"
                  aria-controls="cl-22"
                  aria-expanded="true"
                  autocomplete="off"
                  class="Combobox__input CalculationOptions__input"
                  readonly=""
                  role="combobox"
                  type="text"
                />
              </div>
              
            </div>
            <div
              class="Combobox__menu CalculationOptions__menu "
            >
              <div
                class="CalculationOptions__menu-list"
                id="cl-22"
                role="listbox"
              >
                
                <div
                  aria-selected="true"
                  class="CalculationOptions__option CalculationOptions__option--is-focused CalculationOptions__option--is-selected"
                  id="cl-22-option-0"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption active"
                  >
                    <span>
                      Count
                       
                      
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-1"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-2"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Not Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-3"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Percent Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-4"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Percent Not Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-5"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Value
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-22-option-6"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Unique Values
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          
          <span>
            + Add a group
          </span>
          
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`src/component/kanban/kanban > should match snapshot 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          
          <span>
            + Add a group
          </span>
          
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`src/component/kanban/kanban > should match snapshot without permissions 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
    
  </div>
</div>
`;

exports[`src/component/kanban/kanban do not return a kanban with groupByProperty undefined 1`] = `
<div>
  <div />
</div>
`;

exports[`src/component/kanban/kanban return kanban and change title on KanbanColumnHeader 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="New Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
        
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
        
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          
          <span>
            + Add a group
          </span>
          
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`src/component/kanban/kanban return kanban and click on KanbanCalculationMenu 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          <div
            class="Combobox CalculationOptions"
          >
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="Combobox__live-region"
              role="log"
            />
            <div
              class="CalculationOptions__control"
            >
              <div
                class="CalculationOptions__value-container"
              >
                
                <div
                  class="CalculationOptions__single-value"
                >
                  Count
                </div>
                
                <input
                  aria-activedescendant="cl-20-option-0"
                  aria-controls="cl-20"
                  aria-expanded="true"
                  autocomplete="off"
                  class="CalculationOptions__input"
                  readonly=""
                  role="combobox"
                  type="text"
                />
              </div>
              
            </div>
            <div
              class="Combobox__menu CalculationOptions__menu "
            >
              <div
                class="CalculationOptions__menu-list"
                id="cl-20"
                role="listbox"
              >
                
                <div
                  aria-selected="true"
                  class="CalculationOptions__option CalculationOptions__option--is-focused CalculationOptions__option--is-selected"
                  id="cl-20-option-0"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption active"
                  >
                    <span>
                      Count
                       
                      
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-1"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-2"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Not Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-3"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Percent Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-4"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Percent Not Empty
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-5"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Value
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="CalculationOptions__option"
                  id="cl-20-option-6"
                  role="option"
                >
                  <div
                    class="KanbanCalculationOptions_CustomOption "
                  >
                    <span>
                      Count Unique Values
                       
                      <i
                        class="CompassIcon icon-chevron-right ChevronRightIcon"
                      />
                    </span>
                    
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
        
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable "
            placeholder="New Select"
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
          
        </div>
        <button
          type="button"
        >
          <i
            class="CompassIcon icon-plus AddIcon"
          />
        </button>
        
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        <button
          type="button"
        >
          
          <span>
            + Add a group
          </span>
          
        </button>
      </div>
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <button
          type="button"
        >
          
          <span>
            + New
          </span>
          
        </button>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`src/component/kanban/kanban should match snapshot without permissions 1`] = `
<div>
  <div
    class="Kanban"
  >
    <div
      class="octo-board-header"
      id="mainBoardHeader"
    >
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorOrange "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q1"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="2"
            type="button"
          >
            
            <span>
              2
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        
        
      </div>
      <div
        class="octo-board-header-cell KanbanColumnHeader"
        style="opacity: 1;"
      >
        
        
        <span
          class="Label propColorBlue "
        >
          <input
            class="Editable readonly "
            placeholder="New Select"
            readonly=""
            spellcheck="true"
            title="Q2"
          />
        </span>
        <div
          class="KanbanCalculation"
        >
          <button
            title="1"
            type="button"
          >
            
            <span>
              1
            </span>
            
          </button>
          
        </div>
        
        <div
          class="octo-spacer"
        />
        
        
      </div>
      <div
        class="octo-board-header-cell narrow"
      >
        Hidden columns
      </div>
      
    </div>
    <div
      class="octo-board-body"
      id="mainBoardBody"
    >
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="octo-board-column"
      >
        <div
          class="KanbanCard"
          style="opacity: 1;"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper optionsMenu"
            role="button"
          >
            <button
              type="button"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </button>
            
          </div>
          <div
            class="octo-icontitle"
          >
            <div
              class="octo-icon"
            >
              i
            </div>
            <div
              class="octo-titletext"
            >
              title
            </div>
          </div>
          
          
        </div>
      </div>
      <div
        class="octo-board-column narrow"
      >
        <div
          class="octo-board-hidden-item"
        >
          <div
            aria-label="menuwrapper"
            class="MenuWrapper"
            role="button"
          >
            <span
              class="Label propColorDefault "
            >
              Q3
            </span>
            
          </div>
          <button
            type="button"
          >
            
            <span>
              0
            </span>
            
          </button>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
